solve the white space in smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,21 @@
  body {
       background-color: #f8f9fa;
       font-family: WDXL Lubrifont TC, sans-serif;
+  
 
     }
+    html, body {
+  max-width: 100%;
+  overflow-x: hidden;  
+}
  .navlinks{
   font-size: 1.1rem;
 
  }
+ .navbar {
+  max-width: 100vw;   
+  overflow-x: hidden;
+}
  .name{
   font-size: 1.5rem;
 
@@ -97,4 +106,5 @@ font-size: 1.8rem;
 p{
   font-size: 1.2rem;
 }
+
 
